# dex-liquidity-anomaly-detection

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile.airflow  Dockerfile.bento  README.md  bentofile.yaml  cloudbuild.yaml  dbt_project.yml  docker-compose.yml  package-lock.json  package.json  protocols.yml  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: _composer-sync.yml  _terraform-plan.yml  cloudbuild-trigger.yml  composer-sync-dev.yml  composer-sync-prod.yml  composer-sync.yml  devcontainer-ci.yml  terraform-apply-dev.yml  terraform-apply-prod.yml  terraform-modules-test.yml  terraform-plan-dev.yml  terraform-plan-prod.yml
app/: requirements.txt  streamlit_app.py
config/: snowflake.py
dags/: check_snowflake_connection.py  dex_pipeline.py  predict_pool_iforest.py  predict_volume_spike.py  retrain_isolation_forest.py  retrain_lightgbm.py  train_initial_model.py
dags/scripts/fetcher/: base.py  uniswap.py
docker/airflow/: Dockerfile  requirements.txt
docker/bento/: Dockerfile
docker/mlflow/: Dockerfile  requirements.txt
docker/streamlit/: Dockerfile
infra/: .terraform.lock.hcl  Makefile  README.md  apis.tf  backend.tf  composer_sa.tf  data.tf  dev.auto.tfvars  iam.tf  locals.tf  main.tf  prod.auto.tfvars  sa.tf  variables.tf
infra/envs/dev/: backend.tf  main.tf  providers.tf  sa.tf  variables.tf  versions.tf
infra/envs/prod/: backend.tf
infra/modules/cloud_run/: inputs.tf  main.tf  outputs.tf  variables.tf
infra/modules/network/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
infra/modules/secrets/: main.tf  variables.tf
macros/: json_extract.sql
models/mart/: mart_pool_features.sql  mart_pool_features_labeled.sql
models/sources/: raw.yml
models/staging/: stg_pool_hourly_schema.yml
notebooks/: 01_eda_1.ipynb  02_eda_2.ipynb  03_missing_values.ipynb  03_missing_values.py  _01_eda_1.ipynb  _02_eda_2.ipynb
profiles/: profiles.yml
reports/: 01_eda_1.html  03_eda_missing_values.html  03_missing_values.html
scripts/: create_secrets_from_env.py  import_volume_spike_model.py  start_bento.sh
scripts/fetcher/: run_fetch.py  sushiswap.py  types.py
scripts/model/: constants.py  import_iforest_from_mlflow.py  predict.py  river_model_wrapper.py  train_initial.py  train_lightgbm.py
services/: simple_service.py  volume_spike_service.py
sql/: 01_create_infra.sql  02_create_roles_and_privileges.sql  03_create_fileformat_and_stage.sql  04_create_tables.sql  05_create_stage_permissions.sql
tests/: conftest.py
tests/unit/: test_archive_duplicate.py  test_dag_loading.py  test_fetcher.py
(+8 files in other folders)
