[project]
name = "dex-liquidity-anomaly-detection"
version = "0.1.0"
description = ""
authors = [{ name = "Kazunori Osaki", email = "claudioropez.k@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow-providers-snowflake (>=5.3.1,<6.0.0)",
    "dbt-duckdb (>=1.9.3,<2.0.0)",
    "dbt-bigquery (>=1.9.1,<2.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "bentoml (>=1.4.12,<2.0.0)",
    "optuna (>=4.3.0,<5.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "jupyterlab (>=4.4.1,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "snowflake-connector-python (>=3.15.0,<4.0.0)",
    "apache-airflow-providers-slack (>=9.0.5,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.8"


[tool.ruff]
line-length = 120
